--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="css/estilos.css">
 
-    <title>Document</title>
+    <title>Clase de GitHub</title>
 </head>
 <body>
     <h1>Github</h1>
